fix spelling mistake

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       alt="Photograph of Train Tracks in Hometown with Noir filter"></div>
   <div class="introduction">
     <h2>About Me</h2>
-      <p> I am 19 year-old inspiring reseacher interested in both biology and software
+      <p> I am 19 year-old aspiring reseacher interested in both biology and software
         analysis of data generated from experiments, especially cell imaging. I have
          basic Java and Python experience, and I am currently learning R and Linux.</p>
       <p> Right now, I am a first-year studying Computer Science and Biology as a
