--- a/contact-me.html
+++ b/contact-me.html
@@ -43,7 +43,7 @@
 
 <div class="in-person-para">
   <h3> Good Ol' Fashion Meet Up </h3>
-  <p> If you're in the Boston area and want to meet up in person, email me and we can schedule a time to meet up at Northeastern or the Northeastern-downtown Boston area.</p>
+  <p> If you're in the Boston area and want to meet up in person, email me and we can schedule a time to meet up at Northeastern or the downtown Boston area.</p>
 </div>
 </div>
 </div>
