--- a/footer.html
+++ b/footer.html
@@ -5,7 +5,7 @@
     <div class="header"> <h3> Site Map </h3> </div>
     <ul class="contents">
         <li><a href="index.html">home</a></li>
-        <li><a href="projects.html">projects</a></li>
+        <li><a href="projects.html">cs projects</a></li>
         <li><a href="publications.html">publications</a></li>
         <li><a href="research.html">research</a></li>
         <li><a href="interests.html">interests</a></li>
