--- a/interests.html
+++ b/interests.html
@@ -33,7 +33,7 @@
       <ul>
   <li> <a href="UWH.html">underwater hockey</a> </li>
 <li>  <a href="art.html">art & photography</a> </li>
-  <li> <a href="chinese.html">chinese blog</a> </li>
+  <!-- <li> <a href="chinese.html">chinese blog</a> </li> -->
 </ul></div>
 
 <div class="easter-egg">
