--- a/nav-bar.html
+++ b/nav-bar.html
@@ -2,15 +2,15 @@
   <ul class="nav">
     <li class="option"> <a href="index.html">home</a></li>
 
-    <li class="option"><a href="projects.html">projects</a></li>
+    <li class="option"><a href="projects.html">cs projects</a></li>
 
-    <li class="option"><a href="publications.html">publications</a></li>
+    <li class="option"></li>
 
     <li class="dropdown"><a href="javascript:void(0)" class="dropdn-btn">research</a>
       <div class="dropdn-content">
         <a href="research.html">research home</a>
-        <a href="r-learning.html">learnings</a>
-        <a href="r-interests.html">interests</a>
+        <a href="publications.html">publications</a>
+        <a href="r-projects.html">projects</a>
       </div>
     </li>
 
@@ -19,7 +19,7 @@
         <div class="dropdn-content">
           <a href="UWH.html">underwater hockey</a>
           <a href="art.html">art & photography</a>
-          <a href="chinese.html">chinese blog</a>
+          <!-- <a href="chinese.html">chinese blog</a> -->
         </div>
     </li>
 
