--- a/projects.html
+++ b/projects.html
@@ -9,7 +9,7 @@
 <body>
   <div class="container">
   <div class="header">
-  <h1> Projects </h1>
+  <h1> CS Projects </h1>
 
   <!-- Navigation bar code starts-->
     <div id="nav-bar-placeholder"> </div>
