--- a/r-projects.html
+++ b/r-projects.html
@@ -9,7 +9,7 @@
 <body>
   <div class="container">
     <div class="header">
-  <h1>Research Interests</h1>
+  <h1>Research Projects</h1>
 
   <!-- Navigation bar code starts-->
     <div id="nav-bar-placeholder"> </div>
