--- a/research.html
+++ b/research.html
@@ -9,7 +9,7 @@
 <body>
   <div class = "container">
     <div class="header">
-  <h1> Research Experience, Learnings, and Interests</h1>
+  <h1> Research </h1>
 
   <!-- Navigation bar code starts-->
     <div id="nav-bar-placeholder"> </div>
@@ -32,12 +32,12 @@
        interested in and the different articles I have been reading <a href="r-interests.html">here</a>.</p>
 </div>
 <div class="paragraph">
-      <h2> Learnings </h2>
+      <h2> Publications </h2>
       <!-- figure out how to frame the newest "post" -->
 
 </div>
 <div class="paragraph">
-      <h2> Interests </h2>
+      <h2> Projects </h2>
       <!-- figure out how to frame the newest "post" -->
 
 </div>
